--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ gymnasium==1.1.1
 matplotlib==3.10.3
 numpy==2.3.1
 pandas==2.3.1
+pyfolio-reloaded==0.9.9
+pyportfolioopt==1.5.6
 seaborn==0.13.2
 stable-baselines3==2.6.0 
 stockstats==0.6.5
