--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
 ]
 
 readme = "README.md"
-license = { text = "MIT License" }
+license = "MIT License"
 license-files = ["LICENSE"]
 
 [tool.black]
