--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 exchange_calendars==4.11
 gymnasium==1.1.1
+ipython==7.23.1
 ipywidgets==8.1.7
+lime==0.2.0.1
 matplotlib==3.10.3
 numpy==2.2.6
 pandas==2.3.1
